--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.0.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.7.19",
@@ -21,7 +21,7 @@
     "autoprefixer": "^10.4.12",
     "cssnano": "^5.1.13",
     "eslint": "8.23.1",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.5",
     "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "postcss-import": "^14.1.0",
